--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,15 @@ $colors: (
     text-align: center;
   }
 }
+input {
+  text-align: center;
+  padding: 0.5rem;
+  margin: 0.3rem;
+  background: none;
+  border-width: 0px 0px 1px 0px;
+  font-weight: bolder;
+  font-size: 1.2rem;
+}
 
 .btn {
   text-align: center;
@@ -42,8 +51,21 @@ $colors: (
     color: map-get($colors, text);
     border: 0px;
     &:hover {
-      transform: scale(1.1);
-      filter: brightness(1.1);
+      transform: scale(1.05);
+      filter: brightness(1.2);
     }
   }
+}
+
+.checkbox-container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
