--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,22 +35,16 @@ input {
 }
 
 .btn {
-  text-align: center;
   text-decoration: none;
-  transition: 0.2s ease;
-  margin: 0.3rem;
-  padding: 0.5rem;
-  background: none;
-  border: 1px solid;
-  border-radius: 0.5rem;
-  font-size: 1rem;
-  font-weight: 600;
-  cursor: pointer;
+  margin: 0rem 0.3rem;
+  font-weight: 500 !important;
   &.btn-primary {
     background-color: map-get($colors, primary);
     color: map-get($colors, text);
     border: 0px;
     &:hover {
+      font-weight: 600 !important;
+      background-color: map-get($colors, primary);
       transform: scale(1.05);
       filter: brightness(1.2);
     }
